[package]
name = "laplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cli"]
cli = ["dep:clap", "dep:color-eyre"]

[dependencies]
clap = { version = "4.4.4", features = ["derive"], optional = true }
color-eyre = { version = "0.6.2", optional = true }
nom = "7.1.3"
rand = "0.8.5"
colored = "2"

[[bin]]
name = "dirty"
path = "src/bin/dirty.rs"
